minor change | references w/in notebook

--- a/doc/graphs_networkx/stackoverflow_14242295/networkx_example.ipynb
+++ b/doc/graphs_networkx/stackoverflow_14242295/networkx_example.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using networkx to create graphs\n",
+    "networkx: __[networkx.github.io](https://networkx.github.io/documentation/stable/index.html)__\n",
+    "\n",
+    "answer from stackoverflow: __[stackoverflow.com/a/14244306/5172579](https://stackoverflow.com/a/14244306/5172579)__"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -100,13 +110,6 @@
    "source": [
     "g = nx.draw_circular(G, with_labels=True, font_weight='bold')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
