--- a/doc/graphs_networkx/stackoverflow_14242295/networkx_example.ipynb
+++ b/doc/graphs_networkx/stackoverflow_14242295/networkx_example.ipynb
@@ -67,14 +67,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AA\n",
-      "+-BB\n",
-      "  +-CC\n",
-      "\n",
       "A\n",
       "+-B\n",
       "  +-C\n",
       "+-H\n",
+      "\n",
+      "AA\n",
+      "+-BB\n",
+      "  +-CC\n",
       "\n"
      ]
     }
@@ -93,28 +93,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "dictionary update sequence element #0 has length 1; 2 is required",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-5a643c3f81b2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: dictionary update sequence element #0 has length 1; 2 is required"
-     ]
+     "data": {
+      "text/plain": [
+       "{'A': {'B': {}, 'H': {}},\n",
+       " 'B': {'C': {}},\n",
+       " 'C': {},\n",
+       " 'H': {},\n",
+       " 'AA': {'BB': {}},\n",
+       " 'BB': {'CC': {}},\n",
+       " 'CC': {}}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dict(G)"
+    "nx.convert.to_dict_of_dicts(G)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A': ['B', 'H'],\n",
+       " 'B': ['C'],\n",
+       " 'C': [],\n",
+       " 'H': [],\n",
+       " 'AA': ['BB'],\n",
+       " 'BB': ['CC'],\n",
+       " 'CC': []}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nx.convert.to_dict_of_lists(G)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
