graphs | installation instructions

--- a/doc/graphs_networkx/stackoverflow_14242295/networkx_parallel.ipynb
+++ b/doc/graphs_networkx/stackoverflow_14242295/networkx_parallel.ipynb
@@ -54,6 +54,8 @@
     "\n",
     "```pip install pygraphviz```\n",
     "\n",
+    "(It might be necessery to to install graphviz first: ```apt-get install graphviz```)\n",
+    "\n",
     "How to plot a hierarchichal plot is explained in\n",
     "__[stackoverflow.com/a/11484144/5172579](https://stackoverflow.com/a/11484144/5172579)__"
    ]
