--- a/doc/graphs_networkx/stackoverflow_14242295/networkx_parallel.ipynb
+++ b/doc/graphs_networkx/stackoverflow_14242295/networkx_parallel.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "source": [
     "**REM**: \n",
-    "for _nx.drawing.nx_\\__agraph.graphviz_\\__layout_ one needs to install pygraphviz\n",
+    "for ```nx.drawing.nx_agraph.graphviz_layout``` one needs to install pygraphviz\n",
     "\n",
     "```pip install pygraphviz```\n",
     "\n",
