graphs | to_dict, to_lists

--- a/doc/graphs_networkx/stackoverflow_14242295/networkx_parallel.ipynb
+++ b/doc/graphs_networkx/stackoverflow_14242295/networkx_parallel.ipynb
@@ -18,6 +18,7 @@
     "import re\n",
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
+    "from pprint import pprint\n",
     "%matplotlib inline"
    ]
   },
@@ -34,7 +35,20 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'A': {'A0': {}, 'A1': {}, 'A2': {}},\n",
+      " 'A0': {'B': {}},\n",
+      " 'A1': {'B': {}},\n",
+      " 'A2': {'B': {}},\n",
+      " 'B': {}}\n",
+      "{'A': ['A0', 'A1', 'A2'], 'A0': ['B'], 'A1': ['B'], 'A2': ['B'], 'B': []}\n"
+     ]
+    }
+   ],
    "source": [
     "base_node = 'A'\n",
     "sub_nodes = [f'A{d}' for d in range(3)]\n",
@@ -42,7 +56,10 @@
     "\n",
     "G.add_nodes_from([base_node, *sub_nodes, final_node])\n",
     "G.add_edges_from([(base_node, n) for n in sub_nodes])\n",
-    "G.add_edges_from([(n, final_node) for n in sub_nodes])"
+    "G.add_edges_from([(n, final_node) for n in sub_nodes])\n",
+    "\n",
+    "pprint(nx.convert.to_dict_of_dicts(G))\n",
+    "pprint(nx.convert.to_dict_of_lists(G))"
    ]
   },
   {
