json | indent=? to control pretty printed indent level

--- a/playground/json_yaml/json.ipynb
+++ b/playground/json_yaml/json.ipynb
@@ -2936,7 +2936,7 @@
    "outputs": [],
    "source": [
     "with open('band.json', 'w') as f:\n",
-    "    json.dump(bands, f)"
+    "    json.dump(bands, f, indent=2)"
    ]
   },
   {
