json decoder: use super()

--- a/playground/json_yaml/pickle.ipynb
+++ b/playground/json_yaml/pickle.ipynb
@@ -150,7 +150,7 @@
     "            return int(obj)\n",
     "        if isinstance(obj, complex):\n",
     "            return (float(obj.real), float(obj.imag))\n",
-    "        return json.JSONEncoder.default(self, obj)"
+    "        return super().default(self, obj)"
    ]
   },
   {
@@ -173,6 +173,13 @@
     "with open('phonon.json', 'w') as f:\n",
     "    json.dump(pd, f, cls=NumpyEncoder)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
