json | en-/decoding of complex numbers

--- a/playground/json_yaml/pickle.ipynb
+++ b/playground/json_yaml/pickle.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Serialization of Phonopy Objects and Custom JSON Decoder \n",
     "Is it possible to transform Phonopy object into a json string easily?"
    ]
   },
@@ -141,6 +142,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dp = stringify_keys(get_dict(phonon))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Custom JSON Encoding/Decoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class NumpyEncoder(json.JSONEncoder):\n",
     "    \"\"\" Decode numerical objects that json cannot parse by default\"\"\"\n",
     "    def default(self, obj):\n",
@@ -155,19 +172,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dp = stringify_keys(get_dict(phonon))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    json.dumps(pd, cls=NumpyEncoder)\n",
+    "except Exception as inst:\n",
+    "    print('Exception occured: ', inst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Complex part"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[3.0, 4.0]'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z=3+4j\n",
+    "jz = json.dumps(z, cls=NumpyEncoder)\n",
+    "jz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3.0, 4.0]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.loads(jz)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modifiy NumpyEncoder to provide metadata for complex numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NumpyEncoder(json.JSONEncoder):\n",
+    "    \"\"\" Decode numerical objects that json cannot parse by default\"\"\"\n",
+    "    def default(self, obj):\n",
+    "        if isinstance(obj, np.ndarray):\n",
+    "            return obj.tolist()\n",
+    "        if isinstance(obj, (np.int32, np.int64)):\n",
+    "            return int(obj)\n",
+    "        if isinstance(obj, complex):\n",
+    "            return {\"__complex__\": True,\n",
+    "                    \"Re\": obj.real,\n",
+    "                    \"Im\": obj.imag}\n",
+    "        return super().default(self, obj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"__complex__\": true, \"Re\": 3.0, \"Im\": 4.0}'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z=3+4j\n",
+    "jz = json.dumps(z, cls=NumpyEncoder)\n",
+    "jz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'__complex__': True, 'Re': 3.0, 'Im': 4.0}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.loads(jz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decode_complex(dct):\n",
+    "    if \"__complex__\" in dct:\n",
+    "        return complex(dct['Re'], dct['Im'])\n",
+    "    return dct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3+4j)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.loads(jz, object_hook=decode_complex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "with open('phonon.json', 'w') as f:\n",
