refactoring | helpers/linalg.py -> helpers/maths.py

--- a/examples/supercells/conventions.ipynb
+++ b/examples/supercells/conventions.ipynb
@@ -5,8 +5,9 @@
    "metadata": {},
    "source": [
     "# Supercell Conventions\n",
-    "To generate the supercell lattice from a given lattice $L$ and a supercell matrix $S$, we typically perform\n",
-    "$$ S \\cd"
+    "To generate the supercell lattice from a given primitive lattice $L_\\text{P}$ and a supercell matrix $S$, we typically perform\n",
+    "$$ L_\\text{S} = S \\cdot L_\\text{P}~. $$\n",
+    "Here we show which conventions have to be used to build the correct supercells from given supercell matrices."
    ]
   },
   {
