change read_aims -> read_structure in the examples

--- a/examples/old/phonons_socketio/phonons_socketio.py.ipynb
+++ b/examples/old/phonons_socketio/phonons_socketio.py.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hilde.parsers import read_aims, read_aims_output\n",
+    "from hilde.parsers import read_structure, read_output\n",
     "from hilde.helpers.supercell import find_cubic_cell\n",
     "from hilde.helpers.paths import cwd\n",
     "from hilde.helpers.k_grid import d2k\n",
@@ -41,7 +41,7 @@
     }
    ],
    "source": [
-    "atoms = read_aims('gan.in')\n",
+    "atoms = read_structure('gan.in')\n",
     "vol = atoms.get_volume()\n",
     "atoms"
    ]
@@ -111,13 +111,13 @@
    "source": [
     "# calc = SocketIOCalculator(aims, log=relax_log.open('w'), port=port)\n",
     "try:\n",
-    "    ratoms = read_aims(relax_folder / 'geometry.in.next_step')\n",
+    "    ratoms = read_structure(relax_folder / 'geometry.in.next_step')\n",
     "except FileNotFoundError:\n",
     "    relax_folder.mkdir(exist_ok=True)\n",
     "    atoms.calc = aims\n",
     "    with cwd(relax_folder):\n",
     "        atoms.calc.calculate(atoms)\n",
-    "    ratoms = read_aims(relax_folder / 'geometry.in.next_step')"
+    "    ratoms = read_structure(relax_folder / 'geometry.in.next_step')"
    ]
   },
   {
@@ -287,7 +287,7 @@
     "        folder_with_disp = workdir / f'disp-{ii:03d}'\n",
     "        folder_with_disp.mkdir(parents=True, exist_ok=True)\n",
     "        try:\n",
-    "            force = read_aims_output(folder_with_disp / 'aims.out')[0].get_forces()\n",
+    "            force = read_output(folder_with_disp / 'aims.out')[0].get_forces()\n",
     "        except (FileNotFoundError, IndexError):\n",
     "            cell.calc = calculator\n",
     "            with cwd(folder_with_disp):\n",
@@ -295,7 +295,7 @@
     "                    cell.calc.calculate(cell)\n",
     "                except Error as inst:\n",
     "                    print(inst)\n",
-    "            force = read_aims_output(folder_with_disp / 'aims.out')[0].get_forces()\n",
+    "            force = read_output(folder_with_disp / 'aims.out')[0].get_forces()\n",
     "        force_sets.append(force)\n",
     "    return force_sets"
    ]
