--- a/examples/phonons/phonopy.ipynb
+++ b/examples/phonons/phonopy.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "from pathlib import Path\n",
     "import numpy as np\n",
-    "from hilde.parsers import read_aims, read_aims_output\n",
+    "from hilde.parsers import read_structure, read_output\n",
     "from hilde.phonopy import phono as ph\n",
     "from hilde.structure.convert import phonopy_to_ASE_atoms\n",
     "from ase.dft.kpoints import get_cellinfo, special_paths, bandpath\n",
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "atoms = read_aims('geometry.in')\n",
+    "atoms = read_structure('geometry.in')\n",
     "vol = atoms.get_volume()"
    ]
   },
@@ -119,7 +119,7 @@
     "workdirs = sorted(workdir.glob('disp-???'))\n",
     "for wd in workdirs:\n",
     "    try:\n",
-    "        forces = read_aims_output(str(wd / 'aims.out'))[0].get_forces()\n",
+    "        forces = read_output(str(wd / 'aims.out'))[0].get_forces()\n",
     "    except FileNotFoundError:\n",
     "        exit(f'Please calculate the forces in {wd} in order to proceed.')\n",
     "    force_sets.append(forces)\n",
