--- a/examples/structure/ase_spacegroup.ipynb
+++ b/examples/structure/ase_spacegroup.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hilde.parsers import read_aims\n",
+    "from hilde.parsers import read_structure\n",
     "from hilde.structure import get_spacegroup\n",
     "from ase.spacegroup import get_spacegroup as get_ase_spacegroup"
    ]
@@ -17,8 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "si = read_aims('si.conv.in')\n",
-    "gan = read_aims('gan.in')"
+    "si = read_structure('si.conv.in')\n",
+    "gan = read_structure('gan.in')"
    ]
   },
   {
