--- a/examples/structure/pAtoms.ipynb
+++ b/examples/structure/pAtoms.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from ase.io import read\n",
-    "from hilde.parsers import read_aims\n",
+    "from hilde.parsers import read_structure\n",
     "from hilde.structure import pAtoms"
    ]
   },
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hsi = read_aims('si.conv.in')\n",
+    "hsi = read_structure('si.conv.in')\n",
     "asi = read('si.conv.in', 0, 'aims')"
    ]
   },
