--- a/examples/supercells/conventions.ipynb
+++ b/examples/supercells/conventions.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from hilde.parsers import read_aims\n",
+    "from hilde.parsers import read_structure\n",
     "from hilde.helpers.supercell import find_cubic_cell\n",
     "from hilde.helpers.geometry import get_cubicness\n",
     "from hilde.helpers.maths import clean_matrix\n",
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "atoms = read_aims('gan.in')"
+    "atoms = read_structure('gan.in')"
    ]
   },
   {
