a working test eventually

--- a/examples/phonons/phonopy.ipynb
+++ b/examples/phonons/phonopy.ipynb
@@ -324,6 +324,8 @@
    ],
    "source": [
     "phonon.set_band_structure(bands)\n",
+    "# phonon.plot_band_structure(labels=labels)\n",
+    "# for testing, don't use latex\n",
     "phonon.plot_band_structure()"
    ]
   },
