run over trajectory instead iter(trajectory)
won't affect performance too much. makes life easier

--- a/examples/phono3py/phono3py.ipynb
+++ b/examples/phono3py/phono3py.ipynb
@@ -165,9 +165,18 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/knoop/local/python/lib/python3.7/site-packages/HiLDe-0.1-py3.7-linux-x86_64.egg/hilde/tasks/calculate.py:45: UserWarning: dont compare stupid things -> replace me with hashes\n",
+      "  warn('dont compare stupid things -> replace me with hashes')\n"
+     ]
+    }
+   ],
    "source": [
-    "scs2_computed = calculate_multiple(scs2, calc, f'{atoms.sysname}/fc2', trajectory_to='fc2.traj')\n",
+    "scs2_computed = calculate_multiple(scs2, calc, f'{atoms.sysname}/fc2', trajectory='fc2.traj')\n",
     "fc2_forces = ph3.get_forces(scs2_computed)"
    ]
   },
@@ -177,11 +186,19 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/knoop/local/python/lib/python3.7/site-packages/HiLDe-0.1-py3.7-linux-x86_64.egg/hilde/tasks/calculate.py:45: UserWarning: dont compare stupid things -> replace me with hashes\n",
+      "  warn('dont compare stupid things -> replace me with hashes')\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 548 ms, sys: 3.78 ms, total: 552 ms\n",
-      "Wall time: 551 ms\n"
+      "CPU times: user 651 ms, sys: 7.93 ms, total: 659 ms\n",
+      "Wall time: 657 ms\n"
      ]
     },
     {
@@ -196,7 +213,7 @@
     }
    ],
    "source": [
-    "%time scs3_computed = calculate_multiple(scs3, calc, f'{atoms.sysname}/fc3', trajectory_to='fc3.traj', trajectory_from='fc3.traj.bak')\n",
+    "%time scs3_computed = calculate_multiple(scs3, calc, f'{atoms.sysname}/fc3', trajectory='fc3.traj')\n",
     "fc3_forces = ph3.get_forces(scs3_computed)\n",
     "len(scs3_computed), len(scs3)"
    ]
@@ -254,8 +271,8 @@
       "Cutting-off fc3 (cut-off distance: 3.000000)\n",
       "Building atom mapping table...\n",
       "Creating contracted fc3...\n",
-      "CPU times: user 2.79 s, sys: 483 ms, total: 3.27 s\n",
-      "Wall time: 2.57 s\n"
+      "CPU times: user 2.9 s, sys: 456 ms, total: 3.35 s\n",
+      "Wall time: 2.71 s\n"
      ]
     }
    ],
